// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Checkbox Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid ecl-checkbox__box--disabled"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--invalid"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly when required 1`] = `
<jest>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-checkbox"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-checkbox"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-2"
      name="checkbox-default"
      type="checkbox"
      value="be"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-2"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Belgium
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox ecl-checkbox--disabled"
  >
    <input
      class="ecl-checkbox__input"
      disabled=""
      id="checkbox-default-3"
      name="checkbox-default"
      type="checkbox"
      value="fr"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-3"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--disabled"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        France (disabled)
      </span>
    </label>
  </div>
  <div
    class="ecl-checkbox"
  >
    <input
      class="ecl-checkbox__input"
      id="checkbox-default-4"
      name="checkbox-default"
      type="checkbox"
      value="lorem"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-4"
    >
      <span
        class="ecl-checkbox__box"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Lorem ipsum dolor sit amet, 
        <a
          href="/example"
        >
          consectetur adipiscing elit
        </a>
      </span>
    </label>
  </div>
</jest>
`;

exports[`Checkbox Default single checkbox renders correctly when invalid 1`] = `
<jest>
  <div
    class="ecl-checkbox ecl-checkbox--invalid ecl-checkbox--single"
  >
    <input
      checked=""
      class="ecl-checkbox__input"
      id="checkbox-default-1"
      name="checkbox-default"
      required=""
      type="checkbox"
      value="es"
    />
    <label
      class="ecl-checkbox__label"
      for="checkbox-default-1"
    >
      <span
        class="ecl-checkbox__box ecl-checkbox__box--invalid"
      >
        <span
          aria-hidden="true"
          class="wt-icon--check ecl-icon ecl-icon--xs ecl-checkbox__icon ecl-icon--check"
        />
      </span>
      <span
        class="ecl-checkbox__text"
      >
        Spain
      </span>
    </label>
  </div>
  <div
    class="ecl-feedback-message"
  >
    <span
      aria-hidden="false"
      class="wt-icon--error ecl-icon ecl-icon--s ecl-feedback-message__icon ecl-icon--error"
      role="img"
      title="Error"
    />
      Error message for the group
  </div>
</jest>
`;
